[project]
name = "tagstr"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
description = "Tagged template literals for Python"
license = "MIT"
authors = [
  { name = "Ryan Morshead", email = "ryan.morshead@gmail.com" },
]
keywords = [
  "transpiler",
  "tagged",
  "template",
  "literals",
]

[project.urls]
Homepage = "https://github.com/rmorshea/tagstr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Black ----------------------------------------------------------------------------

[tool.black]
force-exclude = 'tests/cases/.*.py'

# --- Coverage -------------------------------------------------------------------------

[tool.coverage.run]
source = ["src/tagstr"]

[tool.coverage.report]
# TODO: get 100% coverage
fail_under = 64
show_missing = true
skip_covered = true

# --- Ruff -----------------------------------------------------------------------------

[tool.ruff]
select = ["E", "F", "B", "I"]
extend-exclude = ["tests/cases/*.py"]

# --- Hatch ----------------------------------------------------------------------------

[tool.hatch.version]
path = "src/tagstr/__init__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
# When installed in editable mode Hatch inserts a tagstr.pth file that adds
# the project files to the system PATH. The file we include needs to come
# after this alphabetically so that it is loaded after the project is in the
# PATH. This should likely be fixed in Hatch at some point by simply renaming
# the file inserted by Hatch to something like "_tagstr.pth".
# See: https://github.com/pypa/hatch/discussions/827#discussioncomment-5643256
"src/tagstr.pth" = "~tagstr.pth"

[tool.hatch.envs.default.scripts]
checks = [
    "hatch run lint:all",
    "hatch run test:all",
]
fixes = [
    "hatch run lint:fix",
]

[tool.hatch.envs.lint]
skip-install = true
dependencies = ["ruff", "black", "mypy"]

[tool.hatch.envs.lint.scripts]
all = ["style", "types"]
fix = [
    "black .",
    "ruff check --fix .",
]
style = [
    "black --check .",
    "ruff check .",
]
types = "mypy --strict src/tagstr"

[tool.hatch.envs.test]
dependencies = ["pytest", "coverage"]

[tool.hatch.envs.test.scripts]
all = ["pass", "cover"]
pass = "pytest tests"
cover = [
    "TAGSTR_DISABLE_IMPORT_HOOK=true coverage run -m pytest tests",
    "coverage report",
]
